--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "rafaleite",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.8"
   },
   "devDependencies": {
